Fixed spacing on inputs and added a photo of weather, dynamically adds thead with text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
-#fromDatabase tr:nth-child(even){background-color: yellow;}
-#fromDatabase tr:nth-child(odd){background-color: lime;}
+#bodytable tr:nth-child(even){background-color: yellow;}
+#bodytable tr:nth-child(odd){background-color: lime;}
 
   table, td, th,  tr {
     border-collapse: separate;
